--- a/portfolio.html
+++ b/portfolio.html
@@ -34,8 +34,8 @@
     <section class="section" id="Profile">
       <div class="inner1">
         <div class="img-profile">
-          <img src="ReadingBook.png" alt="ReadingBook"  width="500" height="500" style="position:absolute; top: 10px; right: 65%;">
-          <img src="World Bicycle Day-bro.png" alt="ReadingBook"  width="450" height="450" style="position:absolute; bottom: 185px; left: 30%;">
+          <img src="C:\xampp\htdocs\portfolio\img/ReadingBook.png" alt="ReadingBook"  width="500" height="500" style="position:absolute; top: 10px; right: 65%;">
+          <img src="C:\xampp\htdocs\portfolio\img/World Bicycle Day-bro.png" alt="ReadingBook"  width="450" height="450" style="position:absolute; bottom: 185px; left: 30%;">
         </div>
         <div class="section-title">
           <h1>PROFILE</h1>
@@ -54,7 +54,7 @@
           <div class="img-skill">
             <i class="fab fa-laravel fa-10x" style="position:relative; color: red;" ></i><br>
             <i class="fab fa-php fa-9x" style="position:absolute; bottom:10px; color: purple;"></i>
-            <img src="English.png" alt="English" width="300" height="250" style="position:absolute; top: 10px; left: 180px;">
+            <img src="C:\xampp\htdocs\portfolio\img/English.png" alt="English" width="300" height="250" style="position:absolute; top: 10px; left: 180px;">
             
           </div>
         <div class="section-title">
@@ -71,7 +71,7 @@
     <section class="section" id="application">
       <div class="inner3">
         <div class="img-application">
-          <img src="Growth analytics-bro.png" alt="Graph"  width="600" height="600" style="position:absolute; bottom: 180px; right: 30%;">
+          <img src="C:\xampp\htdocs\portfolio\img/Growth analytics-bro.png" alt="Graph"  width="600" height="600" style="position:absolute; bottom: 180px; right: 30%;">
         </div>
         <div class="section-title">
           <h3>APPLICATION</h1>
