--- a/portfolio.html
+++ b/portfolio.html
@@ -3,9 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="favicon.ico">
-  <link rel="icon" type="image/png" href="img/favicon.png">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
+  <link rel="icon" href="favicon.png">
   <link rel="stylesheet" href="portfolio.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Annie+Use+Your+Telescope&display=swap" rel="stylesheet">
@@ -34,8 +33,8 @@
     <section class="section" id="Profile">
       <div class="inner1">
         <div class="img-profile">
-          <img src="C:\xampp\htdocs\portfolio\img/ReadingBook.png" alt="ReadingBook"  width="500" height="500" style="position:absolute; top: 10px; right: 65%;">
-          <img src="C:\xampp\htdocs\portfolio\img/World Bicycle Day-bro.png" alt="ReadingBook"  width="450" height="450" style="position:absolute; bottom: 185px; left: 30%;">
+          <img src="C:/xampp/htdocs/portfolio/img/ReadingBook.png" alt="ReadingBook"  width="500" height="500" style="position:absolute; right: 65%;">
+          <img src="C:/xampp/htdocs/portfolio/img/World Bicycle Day-bro.png" alt="ReadingBook"  width="450" height="450" style="position:absolute; bottom: 30%; left: 30%;">
         </div>
         <div class="section-title">
           <h1>PROFILE</h1>
@@ -53,8 +52,8 @@
         <div class="two-column-wrapper">
           <div class="img-skill">
             <i class="fab fa-laravel fa-10x" style="position:relative; color: red;" ></i><br>
-            <i class="fab fa-php fa-9x" style="position:absolute; bottom:10px; color: purple;"></i>
-            <img src="C:\xampp\htdocs\portfolio\img/English.png" alt="English" width="300" height="250" style="position:absolute; top: 10px; left: 180px;">
+            <i class="fab fa-php fa-9x" style="position:absolute; bottom:10%; color: purple;"></i>
+            <img src="C:/xampp/htdocs/portfolio/img/English.png" alt="English" width="300" height="250" style="position:absolute; top: 10%; left: 25%;">
             
           </div>
         <div class="section-title">
@@ -71,7 +70,7 @@
     <section class="section" id="application">
       <div class="inner3">
         <div class="img-application">
-          <img src="C:\xampp\htdocs\portfolio\img/Growth analytics-bro.png" alt="Graph"  width="600" height="600" style="position:absolute; bottom: 180px; right: 30%;">
+          <img src="C:/xampp/htdocs/portfolio/img/Growth analytics-bro.png" alt="Graph"  width="650" height="700" style="position:absolute; bottom: 25%; right: 30%;">
         </div>
         <div class="section-title">
           <h3>APPLICATION</h1>
@@ -87,8 +86,8 @@
     <section class="section" id="contact">
       <div class="inner4">
         <div class="img-contact">
-          <i class="fab fa-google fa-10x faa-shake animated" style="position:absolute; left: -100px; color: gold;"></i>
-          <i class="fab fa-yahoo fa-10x faa-bounce animated"style="position:absolute; right: 500px; top:100px; color: red;" ></i>
+          <i class="fab fa-google fa-10x faa-shake animated" style="position:absolute;  color: gold;"></i>
+          <i class="fab fa-yahoo fa-10x faa-bounce animated"style="position:absolute; right: 50%; top:20%; color: red;" ></i>
         </div>
         <div class="section-title">
           <h4>CONTACT</h1>
