--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
               </div>
               <div class="section-box1">
                 <div class="section-plot">
-                  <p1>はじめまして、2020年卒の金ダビデと申します。<br>現在は個人事業の経理と雑務をやる傍ら、1年前からプログラミングを独学しています。大学在学中に交換留学生としてアメリカで1年間滞在している際に、友達の影響でプログラマに興味を持ち、勉強を始めました。将来はトレンディーな言語をいち早く習得できるような柔軟なエンジニアを目指しています。よろしくお願い致します。<br>・生年月日:　　1997/09/02<br>・趣味:　読書、散歩、サイクリング、ゲーム<br>・特技:　ムーンウォーク、ダッシュ、独学</p1>
+                  <p1>はじめまして、2020年東洋大学卒業の金ダビデと申します。<br>現在は個人事業の経理と雑務をやる傍ら、1年前からプログラミングを独学しています。大学在学中に交換留学生としてアメリカで1年間滞在している際に、友達の影響でプログラマに興味を持ち、勉強を始めました。将来はトレンディーな言語をいち早く習得できるような柔軟なエンジニアを目指しています。よろしくお願い致します。<br>・生年月日:　　1997/09/02<br>・趣味:　読書、散歩、サイクリング、ゲーム<br>・特技:　ムーンウォーク、ダッシュ、独学</p1>
                 </div>
               </div>
           </div>
