--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
           
           
           <div class="section-title">
-            <h1>PROFILEda</h1>
+            <h1>PROFILE</h1>
           </div>
             <div class=two-column-wrapper>
               <div class="img-profile">
