--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,7 @@
           <div class="two-column-wrapper">
             <div class="section-box2">
               <div class="section-plot">
-                <p1>・HTML,CSS,Javascript（6カ月）<br>・PHP,Laravel,Mysql（6カ月）<br>・Github,Git,Trello<br>・Word,Excel<br>・コンピュータサイエンス基礎<br>・TOEIC900点<br>・韓国語ネイティブレベル<br>・普通運転免許<br>・確定申告作成<br><p3>参考にしたウェブサイト、書籍：ドットインストール、Udemy、独習PHP(山田祥寛)、PHPとMySQLのツボとコツがゼッタイにわかる本(横山達大)、PHPフレームワークLaravel(竹澤有貴)、Coreders at work(Peter Seibel)、YouTube</p3></p1>
+                <p1>・コンピュータサイエンス基礎<br>・HTML,CSS,Javascript（6カ月）<br>・PHP,Laravel,Mysql（6カ月）<br>・Github,Git,Trello<br>・Word,Excel<br>・TOEIC900点<br>・韓国語ネイティブレベル<br>・普通運転免許<br>・確定申告作成<br><p3>参考にしたウェブサイト、書籍：ドットインストール、Udemy、独習PHP(山田祥寛)、PHPとMySQLのツボとコツがゼッタイにわかる本(横山達大)、PHPフレームワークLaravel(竹澤有貴)、Coreders at work(Peter Seibel)、YouTube</p3></p1>
               </div>
             </div>
           </div>
