--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=yes">
   <meta name="keyword" content="David Kim,金ダビデ＞
+                                
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RBV0SVBV05"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RBV0SVBV05');
+</script>
+                                                                            
   <link rel="icon" href="favicon.png">
   <link rel="stylesheet" href="portfolio.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
