--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=yes">
   <meta name="keyword" content="David Kim,金ダビデ＞
+  <meta name="google-site-verification" content="8_6_5dzMSZItFoxJdiWEIRAVrAaL_rcVoabknoF6VBs" />
                                 
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-RBV0SVBV05"></script>
