--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,7 @@
               </div>
               <div class="section-box1">
                 <div class="section-plot">
-                  <p1>はじめまして、2020年東洋大学卒業の金ダビデと申します。<br>現在は個人事業の経理と雑務をやる傍ら、1年前からプログラミングを独学しています。大学在学中に交換留学生としてアメリカで1年間滞在している際に、友達の影響でプログラマに興味を持ち、勉強を始めました。将来はトレンディーな言語をいち早く習得できるような柔軟なエンジニアを目指しています。よろしくお願い致します。<br>・生年月日:　　1997/09/02<br>・趣味:　読書、散歩、サイクリング、ゲーム<br>・特技:　ムーンウォーク、ダッシュ、独学</p1>
+                  <p1>はじめまして、金ダビデと申します。<br>現在はweb制作会社でシステムエンジニアをしております。大学在学中に交換留学生としてアメリカで1年間滞在している際に、友達の影響でプログラマに興味を持ち、勉強を始め、プログラマーになりました。トレンディーな言語をいち早く習得できるような柔軟なエンジニアを目指しています。よろしくお願い致します。<br>・生年月日:　　1997/09/02<br>・趣味:　散歩、サイクリング、ゲーム作り<br>・学びたい技術：AWS,Unity,GO lang</p1>
                 </div>
               </div>
           </div>
@@ -81,7 +81,7 @@
           <div class="two-column-wrapper">
             <div class="section-box2">
               <div class="section-plot">
-                <p1>・コンピュータサイエンス基礎<br>・HTML,CSS,Javascript（6カ月）<br>・PHP,Laravel,Mysql（6カ月）<br>・Github,Git,Trello<br>・Word,Excel<br>・TOEIC900点<br>・韓国語ネイティブレベル<br>・普通運転免許<br>・確定申告作成<br><p3>参考にしたウェブサイト、書籍：ドットインストール、Udemy、独習PHP(山田祥寛)、PHPとMySQLのツボとコツがゼッタイにわかる本(横山達大)、PHPフレームワークLaravel(竹澤有貴)、Coreders at work(Peter Seibel)、YouTube</p3></p1>
+                <p1>・コンピュータサイエンス基礎<br>・HTML,CSS,Javascript<br>・Google Analytics,Google Search Console・PHP,Laravel,Mysql<br>・Github,Git,Trello<br>・TOEIC900点<br>・韓国語ネイティブレベル<br>・普通運転免許<br>・確定申告作成<br><p3>技術書：Udemy、独習PHP(山田祥寛)、PHPフレームワークLaravel(竹澤有貴)、Coreders at work(Peter Seibel)</p3></p1>
               </div>
             </div>
           </div>
