--- a/portfolio.html
+++ b/portfolio.html
@@ -122,6 +122,7 @@
                       <br><br><p2>電話番号<br>:090-3894-3642</p3>
                         
                       </p1>
+                 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2126627637528867"crossorigin="anonymous"></script>
                     </div>
                   </div>
                   </div>
