--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=yes">
   <meta name="keyword" content="David Kim,金ダビデ＞
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2126627637528867"
+     crossorigin="anonymous"></script>
                                 
   <meta name="google-site-verification" content="8_6_5dzMSZItFoxJdiWEIRAVrAaL_rcVoabknoF6VBs" />
                                    
