--- a/portfolio.html
+++ b/portfolio.html
@@ -86,7 +86,7 @@
           <div class="two-column-wrapper">
             <div class="section-box2">
               <div class="section-plot">
-                <p1>・コンピュータサイエンス基礎<br>・HTML,CSS,Javascript<br>・Google Analytics,Google Search Console<br>・PHP,Laravel,Mysql<br>・Github,Git,Notion<br>・TOEIC900点<br>・韓国語ネイティブレベル<br>・普通運転免許<br>・確定申告作成<br><p3>技術書：Udemy、独習PHP(山田祥寛)、PHPフレームワークLaravel(竹澤有貴)、Coreders at work(Peter Seibel)</p3></p1>
+                <p1>・コンピュータサイエンス基礎<br>・HTML,CSS,Javascript<br>・Google Analytics,Google Search Console<br>・PHP,Laravel,Mysql<br>・Github,Git,Notion<br>・TOEIC900点<br>・韓国語ネイティブレベル<br>・普通運転免許<br>・確定申告作成<br>・Webアナリスト</p1>
               </div>
             </div>
           </div>
