--- a/portfolio.html
+++ b/portfolio.html
@@ -86,7 +86,15 @@
           <div class="two-column-wrapper">
             <div class="section-box2">
               <div class="section-plot">
-                <p1>・コンピュータサイエンス基礎<br>・HTML,CSS,Javascript<br>・Google Analytics,Google Search Console<br>・PHP,Laravel,Mysql<br>・Github,Git,Notion<br>・TOEIC900点<br>・韓国語ネイティブレベル<br>・普通運転免許<br>・確定申告作成<br>・Webアナリスト検定</p1>
+                <p1>・PHP/laravel
+・AWS
+・Docker
+・Git,Github,Trello
+・Word,Excel
+・TOEIC900点
+・韓国語ネイティブレベル
+・Webアナリスト検定
+・経理</p1>
               </div>
             </div>
           </div>
