--- a/portfolio.html
+++ b/portfolio.html
@@ -86,14 +86,14 @@
           <div class="two-column-wrapper">
             <div class="section-box2">
               <div class="section-plot">
-                <p1>・PHP/laravel
-・AWS
-・Docker
-・Git,Github,Trello
-・Word,Excel
-・TOEIC900点
-・韓国語ネイティブレベル
-・Webアナリスト検定
+                <p1>・PHP/laravel<br>
+・AWS<br>
+・Docker<br>
+・Git,Github,Trello<br>
+・Word,Excel<br>
+・TOEIC900点<br>
+・韓国語ネイティブレベル<br>
+・Webアナリスト検定<br>
 ・経理</p1>
               </div>
             </div>
