--- a/portfolio.html
+++ b/portfolio.html
@@ -66,7 +66,7 @@
               </div>
               <div class="section-box1">
                 <div class="section-plot">
-                  <p1>はじめまして、金ダビデと申します。<br>現在はweb制作会社でシステムエンジニアをしております。大学在学中に交換留学生としてアメリカで1年間滞在している際に、友達の影響でプログラマに興味を持ち、勉強を始め、プログラマーになりました。トレンディーな言語をいち早く習得できるような柔軟なエンジニアを目指しています。よろしくお願い致します。<br>・生年月日:　　1997/09/02<br>・趣味:　散歩、サイクリング、ゲーム作り<br>・学びたい技術：AWS,Unity,GO lang</p1>
+                  <p1>はじめまして、金ダビデと申します。<br>現在はweb制作会社でシステムエンジニアをしております。大学在学中に交換留学生としてアメリカで1年間滞在している際に、友達の影響でプログラマに興味を持ち、勉強を始め、プログラマーになりました。要件定義から実装までできるグローバルなフルスタックエンジニアを目指しています。よろしくお願い致します。<br>・生年月日:　　1997/09/02<br>・趣味:　散歩、サイクリング、ゲーム作り<br>・学びたい技術：AWS,Unity,GO lang</p1>
                 </div>
               </div>
           </div>
